<resources>
    <string name="app_name" translatable="false">Copycheck</string>
    <string name="title_check">Check</string>
    <string name="title_history">History</string>
    <string name="title_favourites">Favourites</string>
    <string name="select_file">Select file:</string>
    <string name="check">Check</string>
    <string name="reselect_file">Select other file</string>
    <string name="not_recognize_song">Couldn\'t recognize the song</string>
    <string name="details">Details</string>
    <string name="found_matches">Found matches:</string>
    <string name="genre_holder">Genre: %1$s</string>
    <string name="authors_holder">Author(s): %1$s</string>
    <string name="no_matches_found">No matches found</string>
    <string name="profile">Profile</string>
</resources>