<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/holder_file_unselected"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_file"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/select_file_btn"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_upload_file"
            android:contentDescription="@string/select_file"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/holder_file_selected"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/file_name_holder"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Body1"
                app:drawableStartCompat="@drawable/ic_file"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:ellipsize="end"
                tools:text="music.mp3"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSeparator2"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/check_song_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/check" />

        </LinearLayout>

        <Button
            android:id="@+id/reselect_file_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reselect_file"
            android:textAllCaps="false"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </FrameLayout>

</FrameLayout>