<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/details"
        app:navigationIcon="@drawable/ic_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp">

        <View
            android:id="@+id/copyright_status_indicator"
            android:layout_width="16dp"
            android:layout_height="match_parent"
            android:background="@color/full_reg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_music_note"
                    android:drawablePadding="4dp"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:gravity="center_vertical"
                    android:layout_alignParentStart="true"
                    tools:text="The Avengers"/>

                <ImageView
                    android:id="@+id/favourite_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_outline"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/title_favourites" />

            </RelativeLayout>

            <TextView
                android:id="@+id/author_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="Alan Silvestri"/>

            <TextView
                android:id="@+id/copyright_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/main_blue"
                android:gravity="center_vertical"
                android:drawablePadding="4dp"
                app:drawableStartCompat="@drawable/ic_explicit"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                tools:text="© 2012 MARVEL MUSIC, INC"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSeparator1"
        android:layout_marginVertical="24dp"
        android:layout_marginStart="32dp"/>

    <TextView
        android:id="@+id/matches_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/found_matches"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_marginStart="32dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</LinearLayout>